--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-animated-placeholder-textinput": "^0.0.9",
+    "react-native-floating-label-input": "^1.4.2",
+    "react-native-reanimated": "^2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
